<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityExpenses">

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/expense"/>

    <EditText
        android:id="@+id/edtExpDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/date"/>

    <EditText
        android:id="@+id/edtExpValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/amount"/>

    <Spinner
        android:id="@+id/spnQty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtVwTotalPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:padding="10dp"/>

    <ImageView
        android:id="@+id/imgExp"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Button" />
</LinearLayout>